--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-animated-weather": "^4.0.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.3",
+    "reactstrap": "^8.6.0",
     "weather-icons-react": "^1.2.0"
   },
   "scripts": {
