--- a/package.json
+++ b/package.json
@@ -3,17 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@momentum-ui/react": "^23.17.9",
+    "@momentum-ui/react": "^23.22.2",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
-    "axios": "^0.20.0",
-    "bootstrap": "^4.5.2",
-    "react": "^16.13.1",
+    "axios": ">=0.21.1",
+    "bootstrap": "^4.6.0",
+    "react": "^16.14.0",
     "react-animated-weather": "^4.0.1",
-    "react-dom": "^16.13.1",
+    "react-dom": "^16.14.0",
     "react-scripts": "3.4.3",
-    "reactstrap": "^8.6.0",
+    "reactstrap": "^8.9.0",
     "weather-icons-react": "^1.2.0"
   },
   "scripts": {
